# talos-landing

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  devbox.json  pyproject.toml  renovate.json
.github/workflows/: build.yml
app/: __init__.py  config.py  k8s.py  routes.py
app/static/css/: input.css  style.css
app/templates/: base.html  index.html
app/templates/partials/: cluster_stats.html  infra_cards.html  service_cards.html
charts/landing-page/: Chart.yaml  values.yaml
charts/landing-page/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  service.yaml
config/: services.yaml
tests/: test_routes.py
