[project]
name = "talos-landing"
version = "0.1.1"
description = "Landing page for taloslab.cc — live Kubernetes metrics & infrastructure showcase"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1",
    "gunicorn>=23.0",
    "kubernetes>=31.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
